add native tests