@@ -26,10 +26,6 @@ test {
 
 mainClassName = 'example.Application'
 
-graalvmNative.binaries.configureEach {
-    buildArgs.add '--initialize-at-build-time=example'
-    jvmArgs("--add-exports=org.graalvm.sdk/org.graalvm.nativeimage.impl=ALL-UNNAMED")
-}
 
 micronaut {
     version "4.0.0-SNAPSHOT"
